# VoxelEngine

./: .gitignore  CMakeLists.txt  FastNoiseLite.hpp  LICENSE  README.md  compileShaders.bat  main.cpp  shader.frag  shader.rgen  shader.rmiss  shader.vert
include/: materials.hpp  terrain.hpp
src/: main.cpp  terrain.cpp
